Adicionado controller, dtos e alterado entities para suporte a postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,15 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/ponto_inteligente
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=root
 
 # exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+security.basic.enabled=false
