--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,4 +6,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 
 # Desabilita Flyway migration
-spring.flyway.enabled=false
+flyway.enabled=false
+# spring.flyway.enabled=false VERSÃO 2.0.1.RELEASE
