Adicionado autenticacao via JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,10 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-security.basic.enabled=false
-
 # paginação
 paginacao.qtd_por_pagina=25
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
